document mismatch distance original dataset with recalculated distances

--- a/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
+++ b/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
@@ -2655,9 +2655,9 @@ df_dist_terr <- df_dist_terr_presence2 %>%
 Samenvattende tabel aantal broedparen per stratum:
 
 ```{r}
-df_dist_terr %>% 
-  group_by(regio, sbp, openheid, Area) %>%
+df_dist_terr %>%
   st_drop_geometry() %>%
+  group_by(regio, sbp, openheid, Area) %>%
   summarise(aantal_broedparen = sum(size)) %>%
   group_by(regio) %>%
   mutate(aantal_broedparen_per_regio = sum(aantal_broedparen)) %>%
@@ -2671,6 +2671,7 @@ Verdeling van de geregistreerde afstanden:
 ```{r} 
 # Tabel
 df_dist_terr %>% 
+  st_drop_geometry() %>%
   group_by(regio, sbp, openheid) %>%
   summarise(min = min(distance, na.rm = TRUE), 
             mediaan = median(distance, na.rm = TRUE),
@@ -2689,13 +2690,10 @@ df_dist_terr %>%
     labs(y = "Aantal", x = "Afstand (m)")
 ```
 
-
-**bugfix: waarom zijn originele distances niet gelijk aan herberekende?**
-
-
-kijk naar clusters die bestaan uit 1 individu: zijn ze allemaal verschillend?
+We zien plots enkele afstanden > 300 m. Dit zou niet mogen kunnen. We kijken even naar clusters die bestaan uit 1 waarneming. Hierbij zijn de coördinaten van de centroide gelijk aan de coördinaten van de originele waarneming.
 
 ```{r}
+# Dataset met oorspronkelijke afstanden
 original_dist <- sp::merge(gele_kwik_2022_territoria, df_territoria2, 
                            by = intersect("oid", "oid")) %>%
   group_by(cluster) %>%
@@ -2704,30 +2702,33 @@ original_dist <- sp::merge(gele_kwik_2022_territoria, df_territoria2,
   rename(origi_distance = distance2plot) %>%
   arrange(cluster)
 
+# Welke clusters bestaan uit 1 waarneming?
 single_clusts <- original_dist$cluster
 
+# Dataset met herberekende afstanden (centroid tot telpunt)
 new_dist <- df_dist_terr %>%
   filter(cluster %in% single_clusts) %>%
   rename(new_distance = distance) %>%
   arrange(cluster)
 
+# Join oorspronkelijke en nieuwe datasets
 full_df <- original_dist %>% 
   st_join(new_dist)
 
-
+# Zoek punten waarbij oorspronkelijke en nieuwe afstanden niet overeenkomen
 intersect <- full_df %>%
   filter(!(origi_distance %in% c(floor(new_distance), ceiling(new_distance))))
 
+# Vergelijk oorspronkelijke en nieuwe afstanden (mismatches in blauw)
 full_df %>%
   ggplot(aes(x = origi_distance, y = new_distance)) +
     geom_abline(intercept = 0, slope = 1, colour = "red") + 
     geom_point() +
-    geom_point(data = intersect, aes(x = origi_distance, y = new_distance), colour = "blue")
+    geom_point(data = intersect, aes(x = origi_distance, y = new_distance), 
+               colour = "blue")
 ```
 
-nee...
-
-is er een trend?
+We zien dat voor sommige clusters de herberekende afstanden niet gelijk zijn aan de afstanden in de originele dataset (kolom `distance2plot`). Waarom?
 
 ```{r}
 intersect %>% 
@@ -2739,23 +2740,7 @@ intersect %>%
   kable()
 ```
 
-nee ...
-
-
-
-```{r}
-gele_kwik_2022_territoria %>% 
-  filter(oid == "30185764") %>% 
-  select(plotnaam, distance2plot)
-
-df_dist_terr %>% 
-  filter(cluster == 11) %>% 
-  select(Sample.Label, cluster, distance)
-```
-
-waarom verschil?
-
-voorbeeld per plot
+We zien geen verband met regio, sbp of openheid. We plotten enkele clusters die mismatchen. In blauw zien we dat de herberekende afstanden voor elke cluster mooi door het telpunt gaan. Dit is niet voor de originele afstanden (rood):
 
 ```{r}
 plot_circles <- function(plot) {
@@ -2810,12 +2795,9 @@ plot_circles <- function(plot) {
 plot_circles("DM_222.6")
 plot_circles("DM_137.2")
 plot_circles("Ol_4680")
-plot_circles("Ol_7868")
 ```
 
-dist is mis buffer
-
-mis in origineel?
+We zien ook geen spatiale trend in de waarnemingen waarvoor we een mismatch hebben:
 
 ```{r}
 intersect_ids <- intersect$cluster.x
@@ -2827,6 +2809,8 @@ mapview(telpunt_coord %>% st_buffer(300),
         legend = FALSE, col.regions = "green", alpha.region = 0.1) +
 mapview(full_df, zcol = "correct")
 ```
+
+**Conclusie:** We hebben de exacte coördinaten van de clusters en de telpunten dus we gaan er van uit dat de herberekende afstanden correct zijn. Voorlopig hebben we geen verklaring. Bij SOVON terugkoppelen hoe die afstanden worden berekend (automatisch in app?). Een mogelijkheid is wel dat de teller niet exact op het telpunt staat wanneer hij waarnemingen ingeeft waardoor de berekende afstanden in de app nu niet overeenkomen met de afstand tussen het theoretische telpunt en de waarnemingen. Soms zijn de mismatches wel groot (> 100 m), en vele gevallen is er geen mismatch. De mismatches zijn ook aanwezig bij verschillende tellers. Het blijft dus onduidelijk wat er aan de hand is.
 
 
 ### Model fit en selectie
